--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="portrayed_message">Portrayed:</string>
     <string name="status_message">Status:</string>
     <string name="occupation_message">Occupation:</string>
+    <string name="detail_price">Price</string>
 </resources>
