--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="search_text">Search Word</string>
 
-    <!-- Characters View -->
+    <!-- View -->
     <string name="meli">Mercado Libre</string>
 
     <!-- Loading Messages -->
